--- a/projetweb/src/app/templates/assos.html
+++ b/projetweb/src/app/templates/assos.html
@@ -20,7 +20,7 @@
         <tr>
             <td>{{ data.id}}</td>
             <td>{{ data.rna_id}}</td>
-            <td>{{ data.rna_id_ex_id}}</td>
+            <td>{{ data.rna_id_ex}}</td>
             <td>{{ data.gestion}}</td>
             <td><a href="/edit/{{ data.id}}" class="btn btn-outline-primary">edit</a></td>
             <td><a href="/delete/{{ data.id}}" class="btn btn-outline-danger">delete</a></td>
