--- a/projetweb/src/app/templates/edit.html
+++ b/projetweb/src/app/templates/edit.html
@@ -19,7 +19,7 @@
     <br>
     <div class="form-group">
         <label for="rna_id_ex">RNA ID EX</label>
-        <input type="text" class="form-control" id="rna_id_ex_id" name="rna_id_ex_id" value="{{ data.rna_id_ex_id }}" required>
+        <input type="text" class="form-control" id="rna_id_ex" name="rna_id_ex" value="{{ data.rna_id_ex }}" required>
     </div>
     <br>
     <br>
