--- a/projetweb/src/app/static/styles.css
+++ b/projetweb/src/app/static/styles.css
@@ -32,3 +32,21 @@ nav a {
     display: block;
     padding: 10px;
 }
+.mon-bouton {
+    background-color: #4CAF50; /* Couleur de fond */
+    border: none;
+    color: white; /* Couleur du texte */
+    padding: 12px 24px; /* Espace intérieur */
+    text-align: center; /* Alignement du texte */
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer; /* Curseur de souris */
+    border-radius: 10px; /* Arrondi des coins */
+  }
+  
+  .mon-bouton:hover {
+    background-color: #3e8e41; /* Couleur de fond au survol */
+  }
+  
