--- a/projetweb/src/app/templates/base.html
+++ b/projetweb/src/app/templates/base.html
@@ -14,7 +14,7 @@
             <li><a href="/about">About</a></li>
             <li><a href="/hello">Hello</a></li>
             <li><a href="/assos">Assos</a></li>
-            <li><a href="/tableau">Tableau de bord</a></li>
+            <li><a href="/tableau">GraphiqueData</a></li>
         </ul>
     </nav>
     {% block content %}{% endblock %}
