--- a/projetweb/src/app/templates/cercle.html
+++ b/projetweb/src/app/templates/cercle.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}<title>Tableau de bord</title>
+{% block title %}<title>GraphiqueData</title>
 {% endblock %}
 
 {% block content %}
