--- a/projetweb/src/app/templates/tableau.html
+++ b/projetweb/src/app/templates/tableau.html
@@ -2,28 +2,28 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
 
-{% block title %}<title>Page tableau de bord</title>{% endblock %}
+{% block title %}<title>Page GraphiqueData</title>{% endblock %}
 
 {% block content %}
-<h1>Tableau de bord</h1>
+<h1>GraphiqueData</h1>
 <table class="table">
     <thead>
         <tr>
-            <th>Sur quelles données</th>
+            <th>Type de Graphique</th>
             <th>Lien visualisation</th>
 
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>La première visualition énumère les effectifs des associations en fonction de chaque gestion.</td>
+            <td>Histrogramme</td>
             <td><a href="/gestion" class="mon-bouton" >Gestion</a></td>
             
         </tr>
     </tbody>
     <tbody>
         <tr>
-            <td>La seconde visualition montre la répartition des associations en fonction de la gestion, sous force de diagramme circulaire.</td>
+            <td>camembert</td>
             <td><a href="/cercle" class="mon-bouton" >Gestion</a></td>
 
             
